name:                diener
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rubenmoor/ariel#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Drexl
maintainer:          mdrexl@fastmail.fm
copyright:           (c) 2016 Moritz Drexl
category:            development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Diener
                     , Diener.Logger
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , either
                     , fast-logger
                     , mtl
                     , monad-control
                     , monad-logger
                     , time
                     , transformers-base
                     , transformers
  default-language:    Haskell2010

  default-extensions:
      OverloadedStrings
      LambdaCase

-- usage example
executable server
  hs-source-dirs:      app
  other-modules:       Api
                     , Controller
                     , Model
                     , Types
  build-depends:       base
                     , diener
                     , either
                     , gerippe
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , lifted-base
                     , servant-server
                     , text
                     , transformers
                     , warp
  default-language:    Haskell2010
  main-is:             Main.hs

source-repository head
  type:     git
  location: https://github.com/themoritz/diener.git
