name:                diener-example-mongodb
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rubenmoor/herculus-subscribers#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben Moor
maintainer:          ruben.moor@gmail.com
copyright:           (c) 2016 Ruben Moor
category:            development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Database.MongoDb.Class
                     , Handler.Types
                     , Handler
                     , Types
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bson
                     , diener
                     , lifted-base
                     , monad-control
                     , mongoDB
                     , mtl
                     , parsec
                     , servant-server
                     , text
                     , time
                     , transformers
                     , transformers-base
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , RecordWildCards
  ghc-options:         -Wall

executable herculus-subscribers-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Options
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , bytestring
                     , data-default
                     , diener
                     , herculus-subscribers
                     , mongoDB
                     , mtl
                     , network
                     , optparse-applicative
                     , servant-server
                     , text
                     , warp
  default-language:    Haskell2010

test-suite herculus-subscribers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , herculus-subscribers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rubenmoor/herculus-subscribers
