name:                diener-persistent-example
version:             0.1.0.0
synopsis:            Example usage for diener monad
description:         Please see README.md
homepage:            http://github.com/themoritz/diener#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben Moor
maintainer:          ruben.moor@gmail.com
copyright:           (c) 2016 Ruben Moor
category:            development
build-type:          Simple
cabal-version:       >=1.10

executable server
  hs-source-dirs:      src
  other-modules:       Api
                     , Controller
                     , Model
                     , Types
  build-depends:       base
                     , diener
                     , either
                     , gerippe
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , lifted-base
                     , servant-server
                     , text
                     , transformers
                     , warp
  default-language:    Haskell2010
  main-is:             Main.hs

source-repository head
  type:     git
  location: https://github.com/themoritz/diener.git
